@startuml

title __WEEK8-WEEK8_10.NATIONALSERVICE's Class Diagram__\n

  package  {
    class CivilService {
    }
  }
  

  package  {
    class CivilService {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class MilitaryService {
    }
  }
  

  package  {
    class MilitaryService {
    }
  }
  

  package  {
    interface NationalService {
    }
  }
  

  package  {
    interface NationalService {
    }
  }
  

  CivilService -up-|> NationalService
  CivilService -up-|> NationalService
  MilitaryService -up-|> NationalService
  MilitaryService -up-|> NationalService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
